--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -135,7 +135,8 @@
       "it",
       "before",
       "after",
-      "afterEach"
+      "afterEach",
+      "waitFor"
     ],
     "ignore": [
       "ignite/**"
