--- a/boilerplate/app/modules/login/login.sagas.js.ejs
+++ b/boilerplate/app/modules/login/login.sagas.js.ejs
@@ -1,5 +1,6 @@
 import { call, put<% if (props.authType === 'oauth2' || props.authType === 'jwt') { %>, select<% } %> } from 'redux-saga/effects'
 <%_ if (props.authType === 'oauth2') { _%>
+import { Platform } from 'react-native'
 import { authorize } from 'react-native-app-auth'
 <%_ } _%>
 
@@ -27,6 +28,10 @@ export function * login (api) {
       clientId,
       scopes: scope.split(' '),
       redirectUrl: `${AppConfig.appUrlScheme}://authorize`
+    }
+    if (__DEV__ && Platform.OS === 'android') {
+      // this allows connections to a keycloak instance using http:// in dev
+      config.dangerouslyAllowInsecureHttpRequests = true
     }
     try {
       // result includes accessToken, accessTokenExpirationDate and refreshToken
