--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -143,18 +143,26 @@
     ]
   },
   <%_ } _%>
-  <%_ if (props.detox) { _%>
+  <%_ if (props.detox) {
+    let iosProjectType = 'project'
+    let iosProjectSuffix = 'xcodeproj'
+    if (props.authType === 'oauth2') {
+      // cocoapods
+      iosProjectType = 'workspace'
+      iosProjectSuffix = 'xcworkspace'
+    }
+  _%>
   "detox": {
     "configurations": {
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/<%= props.name %>.app",
-        "build": "xcodebuild -project ios/<%= props.name %>.xcodeproj -UseNewBuildSystem=NO -scheme <%= props.name %> -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "build": "xcodebuild -<%= iosProjectType %> ios/<%= props.name %>.<%= iosProjectSuffix %> -UseNewBuildSystem=NO -scheme <%= props.name %> -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "name": "iPhone X"
       },
       "ios.sim.release": {
         "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/<%= props.name %>.app",
-        "build": "export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -project ios/<%= props.name %>.xcodeproj -UseNewBuildSystem=NO -scheme <%= props.name %> -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
+        "build": "export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -<%= iosProjectType %> ios/<%= props.name %>.<%= iosProjectSuffix %> -UseNewBuildSystem=NO -scheme <%= props.name %> -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "name": "iPhone X"
       },
