--- a/boilerplate/test/spec/modules/login/login.sagas.spec.js.ejs
+++ b/boilerplate/test/spec/modules/login/login.sagas.spec.js.ejs
@@ -26,7 +26,11 @@ test('login success path', () => {
   expect(step()).toEqual(put({ type: 'RELOGIN_OK' }))
   <%_} else { _%>
   <%_ if (props.authType === 'session') { _%>
+    <%_ if (props.oldSessionAuthParameters) { _%>
   const authObj = 'j_username=user&j_password=user&remember-me=true'
+    <%_ } else { _%>
+  const authObj = 'username=user&password=user&remember-me=true'
+    <%_ }_%>
   <%_ } else if (props.authType === 'jwt' || props.authType === 'uaa') { _%>
   const authObj = {
     username: 'user',
@@ -73,7 +77,11 @@ test('login failure path', () => {
   expect(step(response)).toEqual(put(LoginActions.loginFailure('WRONG')))
   <%_} else { _%>
   <%_ if (props.authType === 'session') { _%>
+    <%_ if (props.oldSessionAuthParameters) { _%>
   const authObj = 'j_username=user&j_password=user2&remember-me=true'
+    <%_ } else { _%>
+  const authObj = 'username=user&password=user2&remember-me=true'
+    <%_ }_%>
   <%_ } else if (props.authType === 'jwt' || props.authType === 'uaa') { _%>
   const authObj = {
     username: 'user',
