--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,7 +21,8 @@
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     <%_ } _%>
-    "storybook": "storybook start -p 7007"
+    "storybook": "storybook start -p 7007",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "apisauce": "0.16.0",
@@ -38,7 +39,7 @@
     "redux-persist": "5.10.0",
     "redux-saga": "0.16.0",
     "reduxsauce": "1.0.0",
-    "react-native-navigation": "2.1.3-snapshot.33",
+    "react-native-navigation": "2.16.0",
     "seamless-immutable": "7.1.4",
     <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
     "react-native-cookies": "3.2.0",
@@ -55,7 +56,7 @@
     "@storybook/addon-storyshots": "3.4.10",
     "@storybook/channels": "3.4.10",
     "@storybook/react-native": "3.4.10",
-    "@babel/core": "7.0.0",
+    "@babel/core": "7.4.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-env": "1.7.0",
@@ -83,6 +84,7 @@
     "snazzy": "8.0.0",
     "standard": "10.0.2",
     <%_ } _%>
+    "patch-package": "6.1.0",
     "rimraf": "2.6.2"
   },
   "jest": {
