--- a/templates/react-native-navigation/AppDelegate.m.ejs
+++ b/templates/react-native-navigation/AppDelegate.m.ejs
@@ -6,6 +6,8 @@
  */
 
 #import "AppDelegate.h"
+
+#import <React/RCTBridge.h>
 #import <React/RCTLinkingManager.h>
 #import <React/RCTBundleURLProvider.h>
 #import <React/RCTRootView.h>
