remove babel plugin, lint, add jest mock for vector-icons

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -32,7 +32,7 @@
     "prop-types": "15.6.2",
     "querystringify": "2.0.0",
     "ramda": "0.25.0",
-    "react-native-vector-icons": "6.1.0",
+    "react-native-vector-icons": "6.4.2",
     "react-native-keyboard-aware-scroll-view": "0.7.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
@@ -58,9 +58,7 @@
     "@storybook/react-native": "3.4.10",
     "@babel/core": "7.4.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-env": "1.7.0",
-    "babel-preset-react-native": "5.0.2",
     "buffer": "5.2.1",
     "enzyme": "3.5.0",
     "enzyme-adapter-react-16": "1.3.1",
@@ -94,6 +92,7 @@
     ],
     "testPathIgnorePatterns":[
       "/node_modules/",
+      "/e2e/",
       "test/setup.js"
     ],
     "moduleNameMapper": {
@@ -141,7 +140,8 @@
       "waitFor"
     ],
     "ignore": [
-      "ignite/**"
+      "ignite/**",
+      "metro.config.js"
     ]
   },
   <%_ } _%>
