--- a/boilerplate/fastlane/Appfile.ejs
+++ b/boilerplate/fastlane/Appfile.ejs
@@ -4,7 +4,7 @@ apple_id "your-apple-id-email@gmail.com" # Your Apple email address
 team_id "6RH93BGKLZ"  # Developer Portal Team ID
 
 # Android
-json_key_file "./google-play-api-secret.json" # Path to the json secret file - Follow https://github.com/fastlane/supply#setup to get one
+json_key_file "./google-play-api-secret.json" # Path to the json secret file - Follow https://docs.fastlane.tools/actions/supply/#setup to get one
 package_name "com.<%= props.name.toLowerCase() %>" # You Android app package
 
 # you can even provide different app identifiers, Apple IDs and team names per lane:
