fix several inconsistencies in naming, remove old file

--- a/boilerplate/app/shared/services/fixture-api.js.ejs
+++ b/boilerplate/app/shared/services/fixture-api.js.ejs
@@ -8,19 +8,19 @@ export default {
   updateUser: (user) => {
     return {
       ok: true,
-      data: require('../fixtures/updateUser.json')
+      data: require('../fixtures/update-user.json')
     }
   },
   getUsers: () => {
     return {
       ok: true,
-      data: require('../fixtures/getUsers.json')
+      data: require('../fixtures/get-users.json')
     }
   },
   getUser: (userId) => {
     return {
       ok: true,
-      data: require('../fixtures/getUser.json')
+      data: require('../fixtures/get-user.json')
     }
   },
   deleteUser: (userId) => {
