update app-auth, add react-native-cookies to oauth2 apps, clear on logout

--- a/boilerplate/app/modules/login/login.reducer.js.ejs
+++ b/boilerplate/app/modules/login/login.reducer.js.ejs
@@ -47,7 +47,7 @@ export const load = (state) => state.merge({ loading: true })
 export const loadSuccess = (state) => state.merge({ loading: false })
 <%_ } _%>
 // we need to logout, meaning clear access tokens and account
-export const logoutRequest = state => state
+export const logoutRequest = state => INITIAL_STATE
 
 // we've logged out
 export const logoutSuccess = state => INITIAL_STATE
