--- a/boilerplate/test/setup.js.ejs
+++ b/boilerplate/test/setup.js.ejs
@@ -10,9 +10,9 @@ jest
   .mock('react-native-navigation', () => {
     return { Navigation: { showModal: jest.fn((url) => { return [] }) } }
   })
-<%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
+<%_ if (props.authType === 'session' || props.authType === 'uaa' || props.authType === 'oauth2') { _%>
   .mock('react-native-cookies', () => {
-    return { get: jest.fn((url) => { return [] }) }
+    return { get: jest.fn((url) => { return [] }), clearAll: jest.fn((url) => { return [] }) }
   })
 <%_ } _%>
 <%_ if (props.authType === 'oauth2') { _%>
