update dependencies and react-native version

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -25,21 +25,21 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "apisauce": "1.0.2",
+    "apisauce": "1.0.3",
     "format-json": "1.0.3",
     "identity-obj-proxy": "3.0.0",
     "lodash": "4.17.11",
     "prop-types": "15.7.2",
     "querystringify": "2.1.1",
     "ramda": "0.26.1",
-    "react-native-vector-icons": "6.4.2",
+    "react-native-vector-icons": "6.6.0",
     "react-native-keyboard-aware-scroll-view": "0.8.0",
-    "react-redux": "6.0.1",
-    "redux": "4.0.1",
+    "react-redux": "7.1.0",
+    "redux": "4.0.2",
     "redux-persist": "5.10.0",
-    "redux-saga": "1.0.2",
-    "reduxsauce": "1.0.1",
-    "react-native-navigation": "2.21.0",
+    "redux-saga": "1.0.5",
+    "reduxsauce": "1.1.0",
+    "react-native-navigation": "3.0.0-alpha.2-snapshot.388",
     "seamless-immutable": "7.1.4",
     <%_ if (props.authType === 'session' || props.authType === 'uaa' || props.authType === 'oauth2') { _%>
     "react-native-cookies": "3.2.0",
@@ -52,18 +52,18 @@
     "tcomb-form-native": "0.6.20"
   },
   "devDependencies": {
-    "@storybook/addons": "5.0.6",
-    "@storybook/addon-storyshots": "5.0.6",
-    "@storybook/channels": "5.0.6",
-    "@storybook/react-native": "3.4.12",
-    "@babel/core": "7.4.3",
+    "@storybook/addons": "5.1.9",
+    "@storybook/addon-storyshots": "5.1.9",
+    "@storybook/channels": "5.1.9",
+    "@storybook/react-native": "5.1.9",
+    "@babel/core": "7.5.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-env": "1.7.0",
     "buffer": "5.2.1",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
     "ignite-jhipster": "<%= props.packageVersion %>",
-    "jest": "24.7.1",
+    "jest": "24.8.0",
     <%_ if (props.authType === 'oauth2') { _%>
     "react-native-app-auth": "4.4.0",
     <%_ } _%>
@@ -74,15 +74,15 @@
     "mockery": "2.1.0",
     "react-dom": "16.8.6",
     "react-test-renderer": "16.8.6",
-    "reactotron-react-native": "3.2.1",
-    "reactotron-redux": "3.1.0",
-    "reactotron-redux-saga": "4.2.1",
+    "reactotron-react-native": "3.6.4",
+    "reactotron-redux": "3.1.1",
+    "reactotron-redux-saga": "4.2.2",
     <%_ if (!props.skipLint) { _%>
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "10.0.2",
     "snazzy": "8.0.0",
     "standard": "12.0.1",
     <%_ } _%>
-    "patch-package": "6.1.0",
+    "patch-package": "6.1.2",
     "rimraf": "2.6.3"
   },
   "jest": {
