Revert "use stable release for react-native-navigation"
This reverts commit a41a00aa2b972a6ae38b0da4689499cf9212d2e1.

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -39,7 +39,7 @@
     "redux-persist": "5.10.0",
     "redux-saga": "1.0.5",
     "reduxsauce": "1.1.0",
-    "react-native-navigation": "2.26.0",
+    "react-native-navigation": "3.0.0-alpha.2-snapshot.388",
     "seamless-immutable": "7.1.4",
     <%_ if (props.authType === 'session' || props.authType === 'uaa' || props.authType === 'oauth2') { _%>
     "react-native-cookies": "3.2.0",
