--- a/boilerplate/app/navigation/layouts.js.ejs
+++ b/boilerplate/app/navigation/layouts.js.ejs
@@ -17,6 +17,9 @@ import RegisterScreen from '../modules/account/register/register-screen'
 import ForgotPasswordScreen from '../modules/account/password-reset/forgot-password-screen'
 import ChangePasswordScreen from '../modules/account/password/change-password-screen'
 import EntitiesScreen from '../modules/entities/entities-screen'
+<%_ if (props.websockets) { _%>
+import ChatScreen from '../modules/chat/chat-screen'
+<%_ } _%>
 // ignite-jhipster-navigation-import-needle
 
 export const LOGIN_SCREEN = 'nav.LoginScreen'
@@ -27,6 +30,9 @@ export const SETTINGS_SCREEN = 'nav.SettingsScreen'
 export const LAUNCH_SCREEN = 'nav.LaunchScreen'
 export const DRAWER_CONTENT = 'nav.DrawerContent'
 export const ENTITIES_SCREEN = 'nav.EntitiesScreen'
+<%_ if (props.websockets) { _%>
+export const CHAT_SCREEN = 'nav.ChatScreen'
+<%_ } _%>
 // ignite-jhipster-navigation-declaration-needle
 
 const store = createStore()
@@ -111,6 +117,9 @@ export function registerScreensAndStartApp () {
   Navigation.registerComponentWithRedux(DRAWER_CONTENT, () => DrawerContent, Provider, store)
   Navigation.registerComponentWithRedux(LAUNCH_SCREEN, () => LaunchScreen, Provider, store)
   Navigation.registerComponentWithRedux(ENTITIES_SCREEN, () => EntitiesScreen, Provider, store)
+  <%_ if (props.websockets) { _%>
+  Navigation.registerComponentWithRedux(CHAT_SCREEN, () => ChatScreen, Provider, store)
+  <%_ } _%>
   // ignite-jhipster-navigation-registration-needle
 
   Navigation.events().registerAppLaunchedListener(() => {
@@ -230,4 +239,20 @@ export const entitiesScreen = () => Navigation.push('center', {
     }
   }
 })
+
+<%_ if (props.websockets) { _%>
+export const chatScreen = () => Navigation.push('center', {
+  component: {
+    name: CHAT_SCREEN,
+    options: {
+      topBar: {
+        title: {
+          text: 'Chat',
+          color: Colors.snow
+        }
+      }
+    }
+  }
+})
+<%_ } _%>
 // ignite-jhipster-navigation-method-needle
